--- a/pages/editWithdrawal/editWithdrawal.wxml
+++ b/pages/editWithdrawal/editWithdrawal.wxml
@@ -3,7 +3,7 @@
     <view class="item_title">姓名</view>
     <input type="text" placeholder-style="color: #DADAD9;" placeholder="请输入真实姓名" bindinput="handleRealName" />
   </view>
-  <view class="item" style="justify-content: space-between;">
+  <view class="item" style="height: 200rpx;">
     <view class="item_title">账户类型</view>
     <view>
       <radio-group class="radio_group" bindchange="handlePayType">
