--- a/pages/replenish/replenish.wxml
+++ b/pages/replenish/replenish.wxml
@@ -13,10 +13,14 @@
       <input class="input" type="text" placeholder="请输入收货地址" placeholder-class="phcolor" bindinput="handleAddress" />
     </view>
     <view class="inputWrap">
-      <view class="title">补宝数量</view>
-      <input class="input" type="number" disabled value="{{num}}" placeholder="请输入补宝数量" placeholder-class="phcolor" />
+      <view class="title">可补宝数量</view>
+      <input class="input" type="number" disabled value="{{max_num}}" placeholder="请输入补宝数量" placeholder-class="phcolor" />
     </view>
-    <view class="btn" bindtap="sub">申请补宝</view>
+    <view class="inputWrap" wx:if="{{is_replenish}}">
+      <view class="title">补宝数量</view>
+      <input class="input" type="number"  value="{{num}}" placeholder="请输入补宝数量" placeholder-class="phcolor"  bindinput="handleNum"/>
+    </view>
+    <view class="btn" bindtap="sub" wx:if="{{is_replenish}}">申请补宝</view>
     <view class="log" bindtap="log">查看补宝记录</view>
   </view>
 </view>
