--- a/pages/sellerList/sellerList.wxss
+++ b/pages/sellerList/sellerList.wxss
@@ -72,6 +72,7 @@ page {
   margin-top: 16rpx;
 }
 .agencyList .box .bottom .info .phone .phone_title {
+  width: 120rpx;
   height: 40rpx;
   margin-right: 28rpx;
   font-size: 28rpx;
